<resources>
    <string name="app_name">BloodlineApplication</string>

    <string-array name="bloodGroups">
        <item>Select your Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>
    <string-array name="blood">
        <item>Select the one applicable to you</item>
        <item>Blood Donor</item>
        <item>Blood Recipient</item>

    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_key">AIzaSyCQp1VdUH8dsDvAzLofBA6Jte6YwjGzSJE</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_FindBloodDonor">FindBloodDonor</string>
    <string name="menu_bloodrequest">bloodrequest</string>
    <string name="menu_BloodRequest">bloodrequest</string>
    <string name="nav_header_BloodLine">BloodLine</string>
    <string name="menu_Bloodrequest">Blood Request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_Profile">profile</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="mobile">mobile</string>
    <string name="BloodGroup">BloodGroup</string>
    <string name="Name">Name</string>
    <string name="Post">Post</string>
    <string name="email">email</string>
    <string name="BloodGroups">Blood Group</string>
    <string name="Blood">D or R</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="google_api_keys">AIzaSyDdmiXxOX3nqFRxhKf2GThZCjQvRzIiFm4</string>
    <string name="serialnumber">Enter your serial number</string>
    <string name="address">Address</string>
    <string name="add">Address:</string>

</resources>