<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_recipient"
            android:icon="@drawable/ic_bloodtype"
            android:title="@string/menu_Bloodrequest"/>

        <item
            android:id="@+id/nav_bdonor"
            android:icon="@drawable/ic_search"
            android:title="Find Blood Donor"/>
        <item
            android:id="@+id/nav_banks"
            android:icon="@drawable/ic_search"
            android:title="Find Blood Banks"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_backspace"
            android:title="@string/menu_logout"/>

    </group>
</menu>